Building MediaDeviceInfo for enumerateDevices https://bugs.webkit.org/show_bug.cgi?id=146257 <rdar://problem/21513462>

Patch by Matt Daiter <mdaiter@apple.com> on 2015-06-24
Reviewed by Eric Carlson.

MediaDeviceInfo necessary for enumerateDevices

* CMakeLists.txt: Added MediaDevicesInfo.idl
* DerivedSources.make: Added MediaDevicesInfo.idl
* Modules/mediastream/MediaDeviceInfo.h: Created class for MediaDevicesInfo
(WebCore::MediaDeviceInfo::create): Allocates class
(WebCore::MediaDeviceInfo::MediaDeviceInfo): Creates class for public
(WebCore::MediaDeviceInfo::~MediaDeviceInfo):
(WebCore::MediaDeviceInfo::label):
(WebCore::MediaDeviceInfo::deviceId):
(WebCore::MediaDeviceInfo::groupId):
(WebCore::MediaDeviceInfo::kind):
* Modules/mediastream/MediaDeviceInfo.idl:
* WebCore.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/164377@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185940 268f45cc-cd09-0410-ab3c-d52691b4dbfc